--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="bundle.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./frontend/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Vollkorn+SC:700&display=swap" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One|Vollkorn+SC:700|Permanent+Marker&display=swap" rel="stylesheet" type="text/css">
 </head>
 
 <body>
